--- a/Seashore/resources/en.lproj/SeaDocument.xib
+++ b/Seashore/resources/en.lproj/SeaDocument.xib
@@ -741,14 +741,14 @@
         <window title="Resolution..." allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="87" userLabel="Resolution" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="267" y="453" width="254" height="233"/>
+            <rect key="contentRect" x="267" y="453" width="256" height="264"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1415"/>
             <view key="contentView" id="78">
-                <rect key="frame" x="0.0" y="0.0" width="254" height="233"/>
+                <rect key="frame" x="0.0" y="0.0" width="256" height="264"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="88">
-                        <rect key="frame" x="17" y="196" width="92" height="16"/>
+                        <rect key="frame" x="18" y="228" width="92" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Set Resolution" id="16801">
                             <font key="font" metaFont="system"/>
@@ -757,7 +757,7 @@
                         </textFieldCell>
                     </textField>
                     <button verticalHuggingPriority="750" fixedFrame="YES" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="84">
-                        <rect key="frame" x="144" y="12" width="96" height="32"/>
+                        <rect key="frame" x="145" y="13" width="96" height="32"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <buttonCell key="cell" type="push" title="Set" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="16800">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -771,7 +771,7 @@ DQ
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" fixedFrame="YES" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="417">
-                        <rect key="frame" x="48" y="12" width="96" height="32"/>
+                        <rect key="frame" x="49" y="13" width="96" height="32"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="16802">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -785,7 +785,7 @@ Gw
                         </connections>
                     </button>
                     <box toolTip="Horizontal resolution" fixedFrame="YES" title="Box" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="534">
-                        <rect key="frame" x="17" y="56" width="220" height="134"/>
+                        <rect key="frame" x="18" y="88" width="220" height="134"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <view key="contentView" id="Jkm-Yo-Dmg">
                             <rect key="frame" x="3" y="3" width="214" height="128"/>
@@ -873,9 +873,66 @@ Gw
                             </subviews>
                         </view>
                     </box>
+                    <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="13" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" fixedFrame="YES" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dOb-tB-OAi">
+                        <rect key="frame" x="21" y="58" width="215" height="20"/>
+                        <subviews>
+                            <button verticalHuggingPriority="750" tag="72" translatesAutoresizingMaskIntoConstraints="NO" id="CWe-lg-G5P">
+                                <rect key="frame" x="-7" y="-7" width="50" height="32"/>
+                                <buttonCell key="cell" type="push" title="72" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="g8D-At-Ex5">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="quickSet:" target="93" id="TRX-Bh-BRx"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" tag="300" translatesAutoresizingMaskIntoConstraints="NO" id="QNO-d7-t3b">
+                                <rect key="frame" x="42" y="-7" width="59" height="32"/>
+                                <buttonCell key="cell" type="push" title="300" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="v7p-Wu-QYJ">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="quickSet:" target="93" id="rZ9-D9-Hb3"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" tag="600" translatesAutoresizingMaskIntoConstraints="NO" id="eCc-Sw-ZPC">
+                                <rect key="frame" x="100" y="-7" width="59" height="32"/>
+                                <buttonCell key="cell" type="push" title="600" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="AEx-pY-PSs">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="quickSet:" target="93" id="nvn-uc-ffR"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" tag="1200" translatesAutoresizingMaskIntoConstraints="NO" id="R6a-Jd-PsT">
+                                <rect key="frame" x="158" y="-7" width="64" height="32"/>
+                                <buttonCell key="cell" type="push" title="1200" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="vJq-nm-Vhw">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="quickSet:" target="93" id="4po-Lk-Q6e"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <visibilityPriorities>
+                            <integer value="1000"/>
+                            <integer value="1000"/>
+                            <integer value="1000"/>
+                            <integer value="1000"/>
+                        </visibilityPriorities>
+                        <customSpacing>
+                            <real value="3.4028234663852886e+38"/>
+                            <real value="3.4028234663852886e+38"/>
+                            <real value="3.4028234663852886e+38"/>
+                            <real value="3.4028234663852886e+38"/>
+                        </customSpacing>
+                    </stackView>
                 </subviews>
             </view>
-            <point key="canvasLocation" x="188" y="11"/>
+            <point key="canvasLocation" x="188" y="84"/>
         </window>
         <customObject id="93" userLabel="SeaResolution" customClass="SeaResolution">
             <connections>
