--- a/Seashore/resources/en.lproj/SeaDocument.xib
+++ b/Seashore/resources/en.lproj/SeaDocument.xib
@@ -170,38 +170,68 @@
                                         <rect key="frame" x="0.0" y="25" width="251" height="590"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <box borderType="line" title="Point Information" id="XzW-kL-x8j" customClass="SeaBox">
-                                                <rect key="frame" x="0.0" y="-4" width="250" height="194"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                                <view key="contentView" identifier="PointInformation" id="WbE-uW-12Q" customClass="HorizontalView">
-                                                    <rect key="frame" x="3" y="3" width="244" height="176"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="gap">
-                                                            <real key="value" value="5"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="margin">
-                                                            <real key="value" value="10"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </view>
-                                            </box>
+                                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h6r-jK-qGX" customClass="VerticalView">
+                                                <rect key="frame" x="0.0" y="0.0" width="264" height="270"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <subviews>
+                                                    <box fixedFrame="YES" borderType="line" title="Layer Information" translatesAutoresizingMaskIntoConstraints="NO" id="Moo-qh-0cq" customClass="SeaBox">
+                                                        <rect key="frame" x="7" y="174" width="250" height="48"/>
+                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                                        <view key="contentView" id="YE2-DU-G6B" customClass="VerticalView">
+                                                            <rect key="frame" x="3" y="3" width="244" height="30"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                            <subviews>
+                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NJP-TV-twK" customClass="Label">
+                                                                    <rect key="frame" x="5" y="7" width="144" height="11"/>
+                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                                                    <textFieldCell key="cell" controlSize="mini" lineBreakMode="clipping" title="Some layer information" id="u8S-lD-Sya">
+                                                                        <font key="font" metaFont="miniSystem"/>
+                                                                        <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
+                                                            </subviews>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="gap">
+                                                                    <real key="value" value="5"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </view>
+                                                    </box>
+                                                    <box borderType="line" title="Point Information" id="XzW-kL-x8j" customClass="SeaBox">
+                                                        <rect key="frame" x="7" y="-4" width="250" height="163"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                        <view key="contentView" identifier="PointInformation" id="WbE-uW-12Q" customClass="HorizontalView">
+                                                            <rect key="frame" x="3" y="3" width="244" height="145"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="gap">
+                                                                    <real key="value" value="5"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="margin">
+                                                                    <real key="value" value="10"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </view>
+                                                    </box>
+                                                </subviews>
+                                            </customView>
                                             <box borderType="line" title="Layers" id="R00-xD-j7P" customClass="SeaBox">
-                                                <rect key="frame" x="0.0" y="194" width="252" height="396"/>
+                                                <rect key="frame" x="2" y="228" width="252" height="352"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <view key="contentView" id="JUy-Eu-fGn" customClass="BorderView">
-                                                    <rect key="frame" x="3" y="3" width="246" height="378"/>
+                                                    <rect key="frame" x="3" y="3" width="246" height="334"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="47" horizontalPageScroll="10" verticalLineScroll="47" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="7808">
-                                                            <rect key="frame" x="5" y="8" width="236" height="364"/>
+                                                            <rect key="frame" x="5" y="8" width="236" height="320"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <clipView key="contentView" drawsBackground="NO" id="sE3-sQ-GEf">
-                                                                <rect key="frame" x="0.0" y="0.0" width="236" height="364"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="236" height="320"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <outlineView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="44" indentationPerLevel="4" outlineTableColumn="9834" id="7811" customClass="SeaOutlineView">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="236" height="364"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="236" height="320"/>
                                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                         <size key="intercellSpacing" width="2" height="3"/>
                                                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
@@ -267,7 +297,7 @@
                                             </box>
                                         </subviews>
                                         <connections>
-                                            <outlet property="bottom" destination="XzW-kL-x8j" id="B6r-qa-J2I"/>
+                                            <outlet property="bottom" destination="h6r-jK-qGX" id="KIl-ym-XUi"/>
                                             <outlet property="middle" destination="R00-xD-j7P" id="mXJ-2K-eQ6"/>
                                         </connections>
                                     </customView>
@@ -2478,6 +2508,7 @@ Gw
                 <outlet property="deleteButton" destination="1615" id="1676"/>
                 <outlet property="document" destination="-2" id="1608"/>
                 <outlet property="duplicateButton" destination="1614" id="1673"/>
+                <outlet property="layerInfoLabel" destination="NJP-TV-twK" id="aRx-TJ-Onr"/>
                 <outlet property="layerSettings" destination="2891" id="2892"/>
                 <outlet property="newButton" destination="1611" id="1672"/>
             </connections>
